# radio-telemetry-tracker

./: app.py  pyproject.toml
templates/: index.html  map_display.html  upload.html  uploadGeoJSON.html  uploadGeoTiff.html  uploadOverlays.html  uploadShapeFile.html  uploadWebMap.html
uploads/: ltl_cayman_BROWSE.tif
