[tool.poetry]
name = "radio-telemetry-tracker"
version = "0.1.0"
description = ""
authors = ["Kiruthika Marikumaran <kiruthika.star14@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
rasterio = "^1.4.1"
folium = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
